--- a/Bateria/index.html
+++ b/Bateria/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <h1>DIGITAL DRUMS</h1>
+            <h1>VIRUTAL DRUMS</h1>
         </header>
         <nav class="menu">
             <div>
